# codility

./: CMakeLists.txt  README.md
python/: PythonIfElse.py  arithmetic.py  division.py  pythonPrint.py
src/: AppleAndOrange.cc  BinaryGap.cc  BoardRecovery.cc  CMakeLists.txt  ClimbingTheLeaderboard.cc  CountBits.cc  CyclicRotation.cc  DesignerPdfViewer.cc  FirstNonRepeating.cc  MaxCounters.cc  MissingInteger.cc  NewYearChaos.cc  OddOccurencesInArray.cc  QueensAttack.cc  TapeEquilibrium.cc  Threads.cc  main.cc
